2016-04-28 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: attempt to catch status if the xbee is busy
   communicating
 * piccolo2/pplayer.py: add command line option to connect to xbee

2016-04-27 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: hookup xbee client

2016-04-06 Magnus Hagdorn
 * README.md: updated
 * setup.py: add metadata

2016-04-06 Magnus Hagdorn
 * started ChangeLog
 * use setuptools
 * add requirements.txt
 * rename piccolo-player.pyw to piccolo2/pplayer.py
 * delete piccolo2/player/Makefile, get setup tools to build python files
 * piccolo2/player/PlayerApp.py: rename module files
 * piccolo2/player/Schedule.py: ditto
 * piccolo2/player/ScheduleList.py: ditto